# retire

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CLEANUP_PASS.md  Makefile  README.md  STAGE_TRACKER.md  plan.md  pyproject.toml
cli/: __init__.py
docs/: execution_order.md
retireplan/: __init__.py  output_formatting.py  scenario.py
retireplan/cli/: __init__.py  main.py
retireplan/core/: __init__.py  account_flow.py  expenses.py  historical_analysis.py  income.py  market_history.py  projection.py  strategy.py  timeline_builder.py
retireplan/defaults/: historical_market_annual.csv  policy_defaults.yaml
retireplan/io/: __init__.py  scenario_loader.py
retireplan/medicare/: __init__.py  premiums.py
retireplan/mortgage/: __init__.py  schedule.py
retireplan/reporting/: __init__.py  exports.py
retireplan/schema/: __init__.py  retirement.py
retireplan/tax/: __init__.py  calculations.py
retireplan/ui/: __init__.py  main.py  viewmodels.py
scenarios/: README.md  baseline_canonical.yaml  baseline_v1.0.1.yaml  baseline_v1.0.2.yaml  scenario_experimental_analytics.yaml  scenario_high_inflation.yaml  scenario_historical_analysis.yaml  test_baseline_minimal.yaml
scenarios/archive/: baseline_v1.0.1.yaml  (+1 more)
tests/: __init__.py  conftest.py  test_cli.py  test_expenses.py  test_fixture_isolation.py  test_historical_analysis.py  test_income_transitions.py  test_medicare.py  test_mortgage.py  test_projection.py  test_reporting.py  test_scenario_loader.py  test_smoke.py  test_strategy.py  test_tax.py  test_timeline_builder.py  test_ui.py
(+1 files in other folders)
